# meshql

./: .codecov.yml  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.template  README.md  claude-extension.md  lerna.json  pom.xml
.github/workflows/: ci.yml  pages.yml  publish.yml
api/: pom.xml
api/graphlette/: pom.xml
api/restlette/: pom.xml
auth/: pom.xml
auth/casbin/: pom.xml
auth/jwt/: pom.xml
auth/noop/: pom.xml
cert/: README.md  pom.xml
core/: pom.xml
diagrams/: bootstrap.mermaid  components.mermaid  consumer.mermaid  crud.mermaid  environment.mermaid  full.mermaid  full_components.mermaid  graphread.mermaid
docs/: _config.yml  getting-started.md  index.md
docs/_includes/: head_custom.html
docs/architecture/: data-ownership.md  design-decisions.md  federation.md  hard-parts.md  index.md  performance.md  scalability.md  tuning.md
docs/concepts/: auth.md  envelope.md  index.md  meshobj.md  temporal.md
docs/examples/: egg-economy-salesforce.md  egg-economy-sap.md  egg-economy.md  enterprise.md  events.md  farm.md  index.md  legacy.md  logistics.md  power-plants.md
docs/reference/: blueprints.md  configuration.md  graphql-api.md  index.md  mesher.md  (+3 more)
examples/egg-economy-merkql/processor/: Cargo.toml
examples/egg-economy-merkql/processor/src/: cache.rs  cdc.rs  main.rs  meshql_client.rs
examples/egg-economy-merkql/processor/src/projections/: container_inventory.rs  farm_output.rs  hen_productivity.rs  mod.rs
mesher/: README.md  pom.xml
performance/: README.md  REPORT.md  run-all.sh
repos/: pom.xml
server/: README.md  pom.xml
(+698 files in other folders)
