[package]
name = "egg-economy-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
merkql = { path = "../../../../merkql" }
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
